--- a/preprocess_rnn.ipynb
+++ b/preprocess_rnn.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\fabri\\miniconda3\\envs\\d2l\\lib\\site-packages\\librosa\\util\\decorators.py:88: UserWarning: PySoundFile failed. Trying audioread instead.\n",
+      "  return f(*args, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "sec3_subtracks = []\n",
     "\n",
@@ -95,17 +104,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The length of the arrays generated starting from the .wav files differs slightly among the set. We regularize the lengths taking as proxy the minimum length found "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys([66179, 66924, 66150, 66176, 67580, 66770, 66000, 66968, 66140, 66440, 66814, 66528, 66167, 67228, 66308, 67012, 66134, 66352, 66946, 66792, 67034, 66616, 66418, 66506, 66682, 66198, 67210, 66748, 66594, 66880, 66110, 66374, 66330])"
+       "dict_keys([66179, 66968, 66167, 66528, 66176, 66352, 66140, 66134, 67012, 67228, 66308, 66330, 66682, 66880, 66110, 66374, 66418, 66616, 66814, 66792, 66506, 66150, 66440, 66924, 66000, 66770, 67580, 66594, 67210, 66198, 66748, 67034, 66946])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +145,7 @@
        "66000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +166,7 @@
        "dict_keys([66000])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "parameters"
@@ -228,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -280,33 +296,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>hiphop_0</td>\n",
-       "      <td>hiphop</td>\n",
-       "      <td>[-0.14361572, -0.13696289, -0.14282227, -0.153...</td>\n",
+       "      <td>blues_0</td>\n",
+       "      <td>blues</td>\n",
+       "      <td>[0.0073242188, 0.016601562, 0.0076293945, -0.0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>hiphop_1</td>\n",
-       "      <td>hiphop</td>\n",
-       "      <td>[-0.021484375, -0.03277588, -0.059570312, -0.0...</td>\n",
+       "      <td>blues_1</td>\n",
+       "      <td>blues</td>\n",
+       "      <td>[-0.072753906, -0.055389404, -0.036102295, -0....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>hiphop_2</td>\n",
-       "      <td>hiphop</td>\n",
-       "      <td>[-0.18191528, -0.046417236, -0.0680542, -0.227...</td>\n",
+       "      <td>blues_2</td>\n",
+       "      <td>blues</td>\n",
+       "      <td>[0.06997681, 0.14709473, 0.2263794, 0.28271484...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>hiphop_3</td>\n",
-       "      <td>hiphop</td>\n",
-       "      <td>[0.016571045, 0.037506104, 0.05117798, 0.03680...</td>\n",
+       "      <td>blues_3</td>\n",
+       "      <td>blues</td>\n",
+       "      <td>[-0.31854248, -0.2897339, -0.25097656, -0.2348...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>hiphop_4</td>\n",
-       "      <td>hiphop</td>\n",
-       "      <td>[-0.12823486, -0.1592102, -0.18588257, -0.1886...</td>\n",
+       "      <td>blues_4</td>\n",
+       "      <td>blues</td>\n",
+       "      <td>[0.19113159, 0.12878418, 0.06561279, -0.004669...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -316,33 +332,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9995</th>\n",
-       "      <td>country_995</td>\n",
-       "      <td>country</td>\n",
-       "      <td>[-0.04550171, -0.15084839, -0.2517395, -0.2762...</td>\n",
+       "      <td>rock_995</td>\n",
+       "      <td>rock</td>\n",
+       "      <td>[-0.004211426, 0.013061523, 0.007232666, -0.00...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9996</th>\n",
-       "      <td>country_996</td>\n",
-       "      <td>country</td>\n",
-       "      <td>[0.07611084, 0.07437134, 0.06213379, 0.0467529...</td>\n",
+       "      <td>rock_996</td>\n",
+       "      <td>rock</td>\n",
+       "      <td>[0.007659912, 0.0037231445, 0.004058838, 0.010...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9997</th>\n",
-       "      <td>country_997</td>\n",
-       "      <td>country</td>\n",
-       "      <td>[-0.120269775, -0.13812256, -0.07296753, -0.06...</td>\n",
+       "      <td>rock_997</td>\n",
+       "      <td>rock</td>\n",
+       "      <td>[0.028564453, 0.03237915, 0.042114258, 0.05493...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9998</th>\n",
-       "      <td>country_998</td>\n",
-       "      <td>country</td>\n",
-       "      <td>[-0.043762207, -0.024261475, -0.033416748, -0....</td>\n",
+       "      <td>rock_998</td>\n",
+       "      <td>rock</td>\n",
+       "      <td>[-0.08312988, -0.07098389, -0.029724121, -0.01...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9999</th>\n",
-       "      <td>country_999</td>\n",
-       "      <td>country</td>\n",
-       "      <td>[-0.025848389, -0.031677246, 0.048553467, 0.18...</td>\n",
+       "      <td>rock_999</td>\n",
+       "      <td>rock</td>\n",
+       "      <td>[0.014709473, 0.021728516, 0.021942139, 0.0204...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -350,23 +366,23 @@
        "</div>"
       ],
       "text/plain": [
-       "     sec3_track_id    label                                     sec3_subtracks\n",
-       "0         hiphop_0   hiphop  [-0.14361572, -0.13696289, -0.14282227, -0.153...\n",
-       "1         hiphop_1   hiphop  [-0.021484375, -0.03277588, -0.059570312, -0.0...\n",
-       "2         hiphop_2   hiphop  [-0.18191528, -0.046417236, -0.0680542, -0.227...\n",
-       "3         hiphop_3   hiphop  [0.016571045, 0.037506104, 0.05117798, 0.03680...\n",
-       "4         hiphop_4   hiphop  [-0.12823486, -0.1592102, -0.18588257, -0.1886...\n",
-       "...            ...      ...                                                ...\n",
-       "9995   country_995  country  [-0.04550171, -0.15084839, -0.2517395, -0.2762...\n",
-       "9996   country_996  country  [0.07611084, 0.07437134, 0.06213379, 0.0467529...\n",
-       "9997   country_997  country  [-0.120269775, -0.13812256, -0.07296753, -0.06...\n",
-       "9998   country_998  country  [-0.043762207, -0.024261475, -0.033416748, -0....\n",
-       "9999   country_999  country  [-0.025848389, -0.031677246, 0.048553467, 0.18...\n",
+       "     sec3_track_id  label                                     sec3_subtracks\n",
+       "0          blues_0  blues  [0.0073242188, 0.016601562, 0.0076293945, -0.0...\n",
+       "1          blues_1  blues  [-0.072753906, -0.055389404, -0.036102295, -0....\n",
+       "2          blues_2  blues  [0.06997681, 0.14709473, 0.2263794, 0.28271484...\n",
+       "3          blues_3  blues  [-0.31854248, -0.2897339, -0.25097656, -0.2348...\n",
+       "4          blues_4  blues  [0.19113159, 0.12878418, 0.06561279, -0.004669...\n",
+       "...            ...    ...                                                ...\n",
+       "9995      rock_995   rock  [-0.004211426, 0.013061523, 0.007232666, -0.00...\n",
+       "9996      rock_996   rock  [0.007659912, 0.0037231445, 0.004058838, 0.010...\n",
+       "9997      rock_997   rock  [0.028564453, 0.03237915, 0.042114258, 0.05493...\n",
+       "9998      rock_998   rock  [-0.08312988, -0.07098389, -0.029724121, -0.01...\n",
+       "9999      rock_999   rock  [0.014709473, 0.021728516, 0.021942139, 0.0204...\n",
        "\n",
        "[10000 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,16 +478,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([4, 4, 4,  ..., 2, 2, 2])"
+       "tensor([0, 0, 0,  ..., 9, 9, 9], dtype=torch.int32)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,27 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('Processed_data/RNN/target', 'wb') as f: \n",
-    "    pickle.dump(target, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('Processed_data/RNN/target', 'rb') as f:\n",
-    "    target = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,28 +518,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-208.5672, -218.5552, -192.0441,  ...,   -2.1380,   -5.1627,\n",
-       "           -7.3314],\n",
-       "        [-127.1170,  -86.5377,  -65.2389,  ...,  -14.1653,   -5.3262,\n",
-       "           -0.6355],\n",
-       "        [-112.1303, -108.4033, -131.5106,  ...,   -9.1636,   -8.7821,\n",
-       "           -6.4954],\n",
+       "tensor([[-2.4244e+02, -2.1299e+02, -1.9541e+02,  ...,  2.2183e+00,\n",
+       "          8.2816e+00,  8.8715e+00],\n",
+       "        [-1.6625e+02, -1.5054e+02, -1.6450e+02,  ...,  6.3761e-02,\n",
+       "          2.9251e+00,  1.2711e+01],\n",
+       "        [-1.3069e+02, -1.2486e+02, -1.5329e+02,  ...,  6.7889e+00,\n",
+       "          6.1143e+00,  1.3908e-01],\n",
        "        ...,\n",
-       "        [ -98.2837,  -78.3940,  -77.5690,  ...,   -5.3651,   -3.2890,\n",
-       "           -0.2495],\n",
-       "        [ -93.2953,  -91.5130, -120.2912,  ...,  -18.1641,  -15.9425,\n",
-       "          -10.4376],\n",
-       "        [ -50.1972,  -28.8588,  -39.3822,  ...,  -11.4541,  -11.4391,\n",
-       "          -10.4392]], dtype=torch.float64)"
+       "        [-2.7123e+02, -2.6610e+02, -2.7025e+02,  ...,  4.8574e-01,\n",
+       "         -2.0561e+00, -4.5958e+00],\n",
+       "        [-1.1438e+02, -9.3377e+01, -1.0054e+02,  ..., -3.8260e+00,\n",
+       "         -2.2336e+00, -1.5710e+00],\n",
+       "        [-2.6820e+02, -2.5146e+02, -2.5395e+02,  ..., -2.1837e+00,\n",
+       "         -4.0726e+00, -5.3789e+00]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,16 +550,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([4, 4, 4,  ..., 2, 2, 2])"
+       "tensor([0, 0, 0,  ..., 9, 9, 9], dtype=torch.int32)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,28 +581,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.47011889, -0.6995086 , -0.38556404, ..., -0.12976658,\n",
-       "        -0.44513298, -0.72378191],\n",
-       "       [ 0.29348556,  0.46384707,  0.67899055, ..., -1.44323478,\n",
-       "        -0.46296635,  0.08377488],\n",
-       "       [ 0.43398751,  0.27116436,  0.12262683, ..., -0.89701777,\n",
-       "        -0.83991837, -0.6229539 ],\n",
+       "array([[-0.78764284, -0.65046513, -0.41381591, ...,  0.34597108,\n",
+       "         1.02128406,  1.23036079],\n",
+       "       [-0.07341539, -0.1001311 , -0.15433941, ...,  0.11068252,\n",
+       "         0.43703148,  1.69340506],\n",
+       "       [ 0.2600198 ,  0.12611122, -0.06023841, ...,  0.84511728,\n",
+       "         0.78488638,  0.17719336],\n",
        "       ...,\n",
-       "       [ 0.5638002 ,  0.53561027,  0.57547685, ..., -0.48219117,\n",
-       "        -0.24076121,  0.13032775],\n",
-       "       [ 0.61056695,  0.42000365,  0.21681596, ..., -1.87992993,\n",
-       "        -1.62093248, -1.09839215],\n",
-       "       [ 1.01461699,  0.97212047,  0.896063  , ..., -1.14715433,\n",
-       "        -1.12972811, -1.09858412]])"
+       "       [-1.05758505, -1.11845248, -1.04208863, ...,  0.15676552,\n",
+       "        -0.106284  , -0.39384866],\n",
+       "       [ 0.41285305,  0.40357573,  0.38266885, ..., -0.31410316,\n",
+       "        -0.12564417, -0.02905444],\n",
+       "       [-1.02921939, -0.98946415, -0.90524509, ..., -0.13476045,\n",
+       "        -0.32624082, -0.48829588]])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +684,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.15 ('d2l')",
+   "display_name": "Python 3.9.13 ('d2l')",
    "language": "python",
    "name": "python3"
   },
@@ -702,12 +698,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "523c4cb198bbdb78e31908c9a0d4ed4d5c9de132346c47b660e06a58fdf5e494"
+    "hash": "b6cf598af832248cfe9b39042f92a2374bbc30c7205b5dfb8694e1033392472b"
    }
   }
  },
