--- a/preprocess_rnn.ipynb
+++ b/preprocess_rnn.ipynb
@@ -441,16 +441,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sec3_mfcc = np.array(sec3_mfcc, dtype='float64')"
+    "sec3_mfcc = np.array(sec3_mfcc, dtype='float32')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -540,10 +540,11 @@
        "        [ 4.94810581e+00, -1.58299804e+00, -6.88257933e+00, ...,\n",
        "         -2.50655603e+00,  1.46205807e+00, -1.61102617e+00],\n",
        "        [-6.80901432e+00, -1.07672749e+01, -7.77412796e+00, ...,\n",
-       "         -4.58381557e+00, -9.28143263e-01, -2.03668046e+00]]])"
+       "         -4.58381557e+00, -9.28143263e-01, -2.03668046e+00]]],\n",
+       "      dtype=float32)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +580,7 @@
        "array([8, 8, 8, ..., 9, 9, 9])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +598,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +641,7 @@
        "10000"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +661,7 @@
        "10000"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +672,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float32')"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sec3_mfcc_scaled[0].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,12 +700,12 @@
     "\n",
     "for i in range(len(sec3_mfcc_scaled)):\n",
     "\n",
-    "    data_ok.append([sec3_mfcc_scaled[i], y[i]])"
+    "    data_ok.append([sec3_mfcc_scaled[i].astype('float32'), y[i]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +714,7 @@
        "10000"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +725,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float32')"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_ok[0][0].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +754,7 @@
        "2"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +774,7 @@
        "(20, 129)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +804,7 @@
        "8000"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +815,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float32')"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_train[0][0].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float32')"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_test[0][0].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +864,7 @@
        "2"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +884,7 @@
        "(20, 129)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +904,7 @@
        "67224"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +924,7 @@
        "85176"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +944,7 @@
        "2000"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,13 +965,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('Processed_data/RNN/data_test', 'wb') as f: \n",
     "    pickle.dump(data_test, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
