--- a/model_test.ipynb
+++ b/model_test.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "torch.Size([20, 129])"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,13 +340,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
     "# PyTorch does not implicitly reshape the inputs. Thus we define the \"flatten\"\n",
     "# layer to reshape the inputs before the linear layer in our network\n",
-    "net = nn.Sequential(nn.Flatten(), nn.Linear(129*20, 20)) # if softmax not specified pytorch does the prediction bec of argmax(yhat) = argmax(oj)\n",
+    "net = nn.Sequential(nn.Flatten(), nn.Linear(input_num, 20)) # if softmax not specified pytorch does the prediction bec of argmax(yhat) = argmax(oj)\n",
     "\n",
     "def init_weights(m): # argument m shall be a layer\n",
     "    if type(m) == nn.Linear:\n",
